Minor Fix, Fixed the Extra Padding

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -3,7 +3,8 @@
 }
 
 .pushup2 {
-	margin-top: -25rem;
+	margin-top: -27rem;
+	height: 540px;
 }
 
 .pushleft {
